# slack-rs

./: Cargo.toml  justfile
src/: cli.rs  decryptor.rs  main.rs  slack.rs
src/cache/: cache.rs  mod.rs  sled.rs  sqlite.rs
src/model/: channels.rs  conversations.rs  message.rs  mod.rs  replies.rs  search.rs  users.rs
src/model/domain/: mod.rs
