[package]
name = "slack-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
keyring = {version="3.5.0", features = ["apple-native", "windows-native", "sync-secret-service"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
regex={version = "1.11.1"}
sled={version = "0.34.7"}
sqlite={version="0.36.1"}
aes = "0.7"
block-modes = "0.8"
pbkdf2 = "0.12.2"
sha1 = "0.10"
cipher = "0.4" 
clap={version="4.5.20", features = ["derive"]}
url="2.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"